--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -15,17 +15,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
     <!-- Icono Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename="images/favicon.ico")}}" type="image/x-icon">
     
 </head>
 <body>
     <div class="top-bar">
         <i id="theme-icon" class="fa-solid fa-circle-half-stroke"></i>
-        <a href="index.html" class="btn-hola">Volver al inicio</a>
+        <a href="{{ url_for('index') }}" class="btn-hola">Volver al inicio</a>
     </div>
     <br>
     <br>
@@ -46,6 +45,6 @@
         </form>
     </section>
 
-    <script src="js/tema.js"></script>
+    <script src="{{ url_for('static', filename="js/tema.js")}}"></script>
 </body>
 </html>
