--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/styles.css") }}">
     
     <!-- Icono Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename="images/favicon.ico")}}" type="image/x-icon">
 
      <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -31,24 +30,24 @@
         <div class="content">
             <div class="top-bar">
                 <i id="theme-icon" class="fa-solid fa-circle-half-stroke"></i>
-                <a href="contacto.html" class="btn-hola">¡Dime hola!</a>
+                <a href="{{ url_for('contacto') }}" class="btn-hola">¡Dime hola!</a>
             </div>
             
 
             <section id="inicio">
-                <img id="avatar" src="images/avatar.png" alt="Avatar">
+                <img id="avatar" src="{{ url_for('static', filename="images/avatar.png")}}" alt="Avatar" data-url="{{ url_for('sobre_mi') }}">
                 <div>
                     <h2>¡Hola! Soy Diego Ordóñez Tejada</h2>
                     <p>Soy un desarrollador <span class="subrayado">Junior FullStack.</span> Manten el ratón sobre mi avatar para saber <span class="subrayado">sobre mi.</span> </p>
-                    <a href="proyectos.html" id="btn-ver-proyectos">Ver proyectos</a>
+                    <a href="{{ url_for('proyectos') }}" id="btn-ver-proyectos">Ver proyectos</a>
                 </div>
             </section>
         </div>
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="js/avatar.js"></script>
-    <script src="js/tema.js"></script>
-    <script src="js/background.js"></script>
+    <script src="{{ url_for('static', filename="js/avatar.js")}}"></script>
+    <script src="{{ url_for('static', filename="js/tema.js")}}"></script>
+    <script src="{{ url_for('static', filename="js/background.js")}}"></script>
 </body>
 </html>
