--- a/templates/sobre_mi.html
+++ b/templates/sobre_mi.html
@@ -15,19 +15,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/sobre_mi.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/styles.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/sobre_mi.css") }}">
 
 
     <!-- Icono Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename="images/favicon.ico")}}" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
         <!-- Imagen a la derecha -->
         <div class="image-section">
-            <img src="images/foto-mia.png" alt="Mi Foto" class="foto">
+            <img src="{{ url_for('static', filename="images/foto-mia.png") }}" alt="Mi Foto" class="foto">
         </div>
 
         <!-- Sección de texto -->
@@ -43,15 +43,15 @@
                 Mi objetivo es seguir creciendo profesionalmente, explorando nuevos desafíos en el mundo del desarrollo de software
                 y dejando mi huella en cada proyecto que realizo.
             </p>
-            <a href="curriculum3D.html" class="resume-link">↓ Currículum</a>
+            <a href="{{ url_for('curriculum3D') }}" class="resume-link">↓ Currículum</a>
         </div>
     </div>
 
     <div class="top-bar">
         <i id="theme-icon" class="fa-solid fa-circle-half-stroke"></i>
-        <a href="index.html" class="btn-hola">Volver al inicio</a>
+        <a href="{{ url_for('index') }}" class="btn-hola">Volver al inicio</a>
     </div>
 
-    <script src="js/tema.js"></script>
+    <script src="{{ url_for('static', filename="js/tema.js")}}"></script>
 </body>
 </html>
